<resources>
    <string name="app_name">FinanzApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="action_transactions">Transactions</string>
    <string name="action_main">Main</string>

    <string name="btn_revenue_description">Einnahme buchen</string>
    <string name="btn_expense_description">Ausgabe buchen</string>
    <string name="date_description">Datum</string>
    <string name="amount_description">Betrag</string>
    <string name="note_description">Notiz</string>
    <string name="btn_confirm_description">Eintrag erstellen</string>
    <string name="expense">Ausgabe</string>
    <string name="revenue">Einnahme</string>



       <string-array name="category">
        <item>Arzt/Medikamente</item>
        <item>Ausbildung/Studium</item>
        <item>Haushalt</item>
        <item>Haustiere</item>
        <item>Hobby</item>
        <item>Kindergeld</item>
        <item>Kino/Film/TV</item>
        <item>Kommunikation</item>
        <item>Kredite/Leasingraten</item>
        <item>Lohn/Gehalt</item>
        <item>Rente</item>
        <item>Restaurant</item>
        <item>Sonstige Einnahmen</item>
        <item>Sonstiges</item>
        <item>Sparen</item>
        <item>Taschengeld</item>
        <item>Unterhalt</item>
        <item>Urlaub</item>
        <item>Versicherungen</item>
        <item>Wohnen</item>


    </string-array>
    <string-array name="year">
        <item>2021</item>
    </string-array>
    <string-array name="month">
        <item>Mai</item>
    </string-array>
    <string-array name="days">
        <item>01</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->


</resources>
