<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.finanzapp.MainActivity">
    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:orderInCategory="1"
        android:title="@string/action_main"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_transactions"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="2"
        android:title="@string/action_transactions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
